Fixed books find and books sort commands